beschreibung der Kontrollmethode ändert sich abhängig von der Verfügbarkeit des acceleroameters

--- a/Labyrinth.html
+++ b/Labyrinth.html
@@ -20,7 +20,7 @@
             The goal of the Game is to navigate the ball to the goal. But beholde the holes in the floor, 
             they will send you back to the start. To navigate the labyrinth
             <span id="control_method">
-                tilt your device.
+                use the w,a,s,d keys.
             </span>
         </p>
     </div>
