Bedienanzeige fertig in js

--- a/Labyrinth.html
+++ b/Labyrinth.html
@@ -18,11 +18,10 @@
         <h3>Labyrinth Game</h3>
         <p>
             The goal of the Game is to navigate the ball to the goal. But beholde the holes in the floor, 
-            they will send you back to the start. To navigate the labyrinth
-            <span id="control_method">
-                use the w,a,s,d keys.
-            </span>
+            they will send you back to the start.
         </p>
+
+        <p id="control_method"></p>
     </div>
     <div>
         <button id="start_button" onclick="start()">Start</button>
