--- a/Labyrinth.html
+++ b/Labyrinth.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Labyrith Game</title>
+    <meta name="viewport" content="width=device-width; initial-scale=1.0;">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <link id="css" rel="stylesheet" type="text/css" href="labyrinth.css">
+    <link id="css" rel="stylesheet" href="labyrinth.css">
+    <!--rel="stylesheet" type="text/css"-->
 </head>
 
 
@@ -14,7 +17,7 @@
         Your browser does not support the HTML canvas tag.
     </canvas>
     <script src="labyrinth.js"></script>
-    <div id="instruction">
+    <div class="desription" id="instruction">
         <h3>Labyrinth Game</h3>
         <p>
             The goal of the Game is to navigate the ball to the goal. But beholde the holes in the floor, 
@@ -22,10 +25,10 @@
         </p>
 
         <p id="control_method"></p>
-    </div>
-    <div>
+
         <button id="start_button" onclick="start()">Start</button>
     </div>
+
     
 
     
